--- a/FrontEnd/ConectaMais/src/app/feed/feed.component.css
+++ b/FrontEnd/ConectaMais/src/app/feed/feed.component.css
@@ -59,3 +59,89 @@
      width: auto;
      height: max-content;
   }
+
+   #edit {
+     outline: black;
+     border: 1px solid;
+     background-color: transparent;
+     color: black;
+   }
+
+   #edit:hover {
+     outline: #007a80;
+     border: 1px solid;
+     background-color: #007a80;
+     color: white;
+   }
+
+   #alert {
+     outline: black;
+     border: 1px solid;
+     background-color: transparent;
+     color: black;
+   }
+
+   #alert:hover {
+     outline: red;
+     border: 1px solid;
+     background-color: red;
+     color: white;
+   }
+
+
+
+
+
+
+
+
+
+
+  .w-5 {
+    width: 50px;
+  }
+
+  .w-20 {
+    width: 20px;
+  }
+
+  .w-60 {
+    width: 60px;
+  }
+
+  .w-40 {
+    width: 40px;
+  }
+
+  .w-titulo {
+    width: 25px;
+  }
+
+  .titulo {
+    font-size: 20px;
+  }
+
+  a {
+    cursor: pointer;
+  }
+
+  .btn-inserir {
+    box-shadow: 0px 0px 15px -5px rgba(0, 0, 0, 0.75);
+  }
+
+  .btn-inserir:hover {
+    text-decoration: none;
+  }
+
+  .inserir {
+    background-color: #fff !important;
+    color: #4b4b4b !important;
+    transition: 0.5s;
+  }
+
+
+  .inserir:hover {
+    background-color: #3e64ff !important;
+    color: #fff !important;
+
+  }
