--- a/FrontEnd/ConectaMais/src/app/perfil/perfil.component.html
+++ b/FrontEnd/ConectaMais/src/app/perfil/perfil.component.html
@@ -81,7 +81,7 @@
           </div>
           <div class="form-group was-validated">
             <label for="confirmSenha" class="d-flex ">Confirme sua senha:</label>
-            <input [(ngModel)]="senhaUser" class="form-control" type="password" name="confirmSenha "
+            <input [(ngModel)]="usuario.senha" class="form-control" type="password" name="confirmSenha "
               id="confirmSenha" placeholder="Repita a nova senha se for atualiza-lá">
           </div>
           <div class="d-flex justify-content-end pb-5">
