subindo pesquisa de postagem no feed

--- a/FrontEnd/ConectaMais/src/app/feed/feed.component.html
+++ b/FrontEnd/ConectaMais/src/app/feed/feed.component.html
@@ -47,6 +47,16 @@
   <!-- feed de postagem -->
   <hr class="mt-5">
   <h4 class="text-center text-white my-5" style="text-shadow: 2px 2px 4px #000000;">Feed de postagens</h4>
+
+  <div class="row d-flex justify-content-center mt-5 mb-5">
+    <div class="col-md-4">
+      <div class="form-group">
+        <input type="text" class="form-control" id="titulo" placeholder="Digite um título de postagem para pesquisar"
+          [(ngModel)]='tituloPesquisa' (keyup)='findByTituloPostagem()'>
+      </div>
+    </div>
+  </div>
+
   <div class="row d-flex justify-content-center mb-5" *ngFor='let item of listaPostagens'>
     <div class="col-md-9 bg-white" id="formularioPostagem" style="padding-left: 64px; padding-right: 64px;">
       <div class="row">
@@ -109,8 +119,8 @@
         <div class="modal-body">
           <div class="form-group">
             <!-- <label for="texto">Contéudo:</label> -->
-            <textarea [(ngModel)]='comentario.conteudoComentario' class="form-control" name="texto" id="texto"
-              rows="3" placeholder="Adicione um comentario"></textarea>
+            <textarea [(ngModel)]='comentario.conteudoComentario' class="form-control" name="texto" id="texto" rows="3"
+              placeholder="Adicione um comentario"></textarea>
           </div>
         </div>
         <div class="modal-footer">
