--- a/FrontEnd/ConectaMais/src/app/feed/feed.component.css
+++ b/FrontEnd/ConectaMais/src/app/feed/feed.component.css
@@ -26,17 +26,18 @@
   cursor: pointer;
 }
 
-.button1 {
+.my-btn {
+  background-color: #007A80;
+  color: white;
+}
+
+.my-btn:hover {
   background-color: white;
   color: #007A80;
   font-weight: bolder;
   border: 2px solid #007A80;
 }
 
-.button1:hover {
-  background-color: #007A80;
-  color: white;
-}
 
 #formularioPostagem {
   border-radius: 20px;
