--- a/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
@@ -5,7 +5,7 @@
       <p class="w-50 fw-bold fs-65 m-0 mb-4 fade-in" style="line-height: 100%;  text-shadow: 2px 2px 4px #000000;">
         Se conecte ainda mais<br>à Tecnologia</p>
       <p class="w-75 fw-bold fs-16 m-0 fade-in" style="text-shadow: 2px 2px 4px #000000;">Você quer aprender
-        a programar, mas não sabe por onde começar.
+        a programar, mas não sabe por onde começar?
         <br> O Cenecta+ te ajuda! Busque por programas, bootcamps e hackathons.<br>Mais oportunidades ao alcance de
         todos! Venha construir novas conexões!</p>
       <div class="m-0 mt-4">
@@ -25,9 +25,9 @@
       <h1 class="text-center pt-5 pb-5">Quem somos</h1>
       <p class="text-center fs-18" style="margin-right: 5%; margin-left: 5%;">
         Nossos equipe foi fundada por pessoas como você que está do outro lado da tela. Iniciamos nosso apredizado e
-        carreira na área de programação graças a oportunidades como as encontradas nesta plataforma. Com o desejo de
-        levar a oportunidade que nos foi oferecida a mais pessoa e promover maior diversidade ao ambiente da tecnologia,
-        a equipe do CONECTA+ criou esta site como projeto integrador do nosso bootcamp na Generation Brasil. Sinta-se a
+        carreira na área de programação graças a organizações como essa! Com o desejo de
+        levar a oportunidade que nos foi oferecida a mais pessoas e promover maior diversidade ao ambiente da tecnologia,
+        a equipe do CONECTA+ criou esta plataforma como projeto integrador do nosso bootcamp na Generation Brasil. Sinta-se a
         vontade para navegar nesse espaço e conhecer organizações, eventos e noticias da área. Nosso intuito é te ajudar
         a fazer novas conexões!</p>
     </div>
@@ -49,13 +49,13 @@
       <div class="container-fluid">
         <h1 class="text-center pt-5 pb-5">Faça parte</h1>
         <p class="text-center fs-18 mb-5" style="margin-right: 5%; margin-left: 5%;">Nossa equipe começou pequena, mas
-          esperamos expandi-lá e, assim, alcançar mais pessoas. Venha fazer parte! A manuntenção do site é feito de modo
-          independente e probono. Contamos também com uma equipe de prospecção de parcerias a fim de suportar os
+          esperamos expandi-lá e, assim, alcançar mais pessoas. Venha fazer parte! A manutenção do site é feito de modo
+          independente e pro bono. Contamos também com uma equipe de prospecção de parcerias a fim de suportar os
           programas
           e bootcamps, principalmente cujos projetos possuem vieis sociais e que promovem maior diversidade no ambiente
-          de
+          da
           tecnologia. Basta entrar em <a class="alert-link" href="/home#rodape">contato</a> para nos
-          ajude a ir mais longe!</p>
+          ajudar a ir mais longe!</p>
       </div>
     </div>
     <!-- cards -->
@@ -226,9 +226,10 @@
           <div class="flip-box-back">
             <h2 class="mt-2 text-center">Caio Tairone</h2>
             <p class="mt-2 mb-2 text-center font-weight-bolder"> Desenvolverdor Fullstack JAVA</p>
-            <p class="text-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores alias doloremque
-              at voluptatum omnis labore temporibus, sequi blanditiis unde eligendi natus nisi officiis iusto
-              necessitatibus.</p>
+            <p class="text-left">Sempre tive a visão da tecnologia como algo realmente presente na
+              vida das pessoas, nesses últimos anos pude perceber como essa ideia
+              já esta presente, ainda não para todos. Com o Conecta + vamos fazer essa ponte 
+              entre aluno e instituição.</p>
             <div class="pt-2">
               <ul class="social-icons text-right">
                 <li><a class="instagram" href="#"><span class="fab fa-instagram" target="_blank"></span></a></li>
@@ -250,9 +251,9 @@
           <div class="flip-box-back">
             <h2 class="mt-2 text-center">Ercília Dantas</h2>
             <p class="mt-2 mb-2 text-center font-weight-bolder"> Desenvolverdora Fullstack JAVA</p>
-            <p class="text-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores alias doloremque
-              at voluptatum omnis
-              labore temporibus, sequi blanditiis unde eligendi natus nisi officiis iusto necessitatibus.</p>
+            <p class="text-left">A tecnologia causa mudanças transformadoras em quem a conhece e ser
+               o condutor dessa mudança é o que me emociona e inspira. Nunca é tarde pra se reinventar,
+                nossa metamorfose é continua. O destino final é esculpir uma versão melhor que a anterior!</p>
             <div class="pt-2">
               <ul class="social-icons text-right">
                 <li><a class="instagram" href="https://www.instagram.com/ercilia_regina/"><span class="fab fa-instagram"
@@ -274,9 +275,9 @@
           <div class="flip-box-back">
             <h2 class="mt-2 text-center">Leonardo Silva</h2>
             <p class="mt-2 mb-2 text-center font-weight-bolder"> Desenvolverdor Fullstack JAVA</p>
-            <p class="text-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores alias doloremque
-              at voluptatum omnis
-              labore temporibus, sequi blanditiis unde eligendi natus nisi officiis iusto necessitatibus.</p>
+            <p class="text-left">Sempre tentei entender como as coisas funcionam. Mas nunca parei
+               para entender o desenvolvimento de softwares. Até receber a oportunidade de realizar
+               um curso de Java, na Generation, e descobri uma profunda paixão por solucionar problemas.</p>
             <div class="pt-2">
               <ul class="social-icons text-right">
                 <li><a class="instagram" href="#"><span class="fab fa-instagram" target="_blank"></span></a></li>
@@ -300,9 +301,10 @@
           <div class="flip-box-back">
             <h2 class="mt-2 text-center">Lucas Chagas</h2>
             <p class="mt-2 mb-2 text-center font-weight-bolder"> Desenvolverdor Fullstack JAVA</p>
-            <p class="text-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores alias doloremque
-              at voluptatum omnis
-              labore temporibus, sequi blanditiis unde eligendi natus nisi officiis iusto necessitatibus.</p>
+            <p class="text-left">Durante minha formação em engenharia, descobri o mundo da programação.
+                  Me encantei de primeira, foi minha matéria preferida! Depois disso consegui uma chance única:
+                  Se tornar desenvolvedor em 3 meses. Agora trilho neste caminho incrível.</p>
+                  
             <div class="pt-2">
               <ul class="social-icons text-right">
                 <li><a class="instagram" href="#"><span class="fab fa-instagram" target="_blank"></span></a></li>
@@ -325,9 +327,10 @@
           <div class="flip-box-back">
             <h2 class="mt-2 text-center">Vitor Cutri</h2>
             <p class="mt-2 mb-2 text-center font-weight-bolder"> Desenvolverdor Fullstack JAVA</p>
-            <p class="text-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores alias doloremque
-              at voluptatum omnis
-              labore temporibus, sequi blanditiis unde eligendi natus nisi officiis iusto necessitatibus.</p>
+            <p class="text-left">Apaixonado por tecnologia, busco impactar e transformar o mundo ao meu redor.
+               Além de sempre querer saber o porquê das coisas, adoro lidar com desafios e solucionar problemas.
+                Busco todos os dias ser uma versão melhor de mim mesmo.
+            </p>
             <div class="pt-2">
               <ul class="social-icons text-right">
                 <li><a class="instagram" href="#" target="_blank"><span class="fab fa-instagram"></span></a></li>
