ajustes em hiperlinks da home

--- a/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
@@ -74,7 +74,7 @@
           <div class="face face2">
             <div class="content">
               <h3>
-                <a href="#" target="_blank" class="font-weight-bold">ESTUDE</a>
+                <a routerLink='/cadastrar' target="_blank" class="font-weight-bold">ESTUDE</a>
               </h3>
               <p class="card-text text-center font-weight-bolder" style="color: #1B3659;">Sou estudante de tecnologia ou
                 gostaria de conhecer mais a área, quero estudar e conhecer os projetos disponíveis.</p>
@@ -95,7 +95,7 @@
           <div class="face face2">
             <div class="content">
               <h3>
-                <a href="#" target="_blank" class="font-weight-bold">PARTICIPE</a>
+                <a routerLink='/cadastrar' target="_blank" class="font-weight-bold">PARTICIPE</a>
               </h3>
               <p class="card-text text-center font-weight-bolder" style="color: #1B3659;">Sou uma instituição de ensino
                 e
@@ -117,7 +117,7 @@
           <div class="face face2">
             <div class="content">
               <h3>
-                <a href="#" target="_blank" class="font-weight-bold">DOE</a>
+                <a routerLink='/apoie' target="_blank" class="font-weight-bold">DOE</a>
               </h3>
               <p class="card-text text-center font-weight-bolder" style="color: #1B3659;">Acredito que a união de
                 esforços
@@ -232,7 +232,7 @@
               entre aluno e instituição.</p>
             <div class="pt-2">
               <ul class="social-icons text-right">
-                <li><a class="instagram" href="#"><span class="fab fa-instagram" target="_blank"></span></a></li>
+                <li><a class="instagram" href="https://www.instagram.com/caiotsv/" target="_blank"><span class="fab fa-instagram" ></span></a></li>
                 <li><a class="github" href="https://github.com/tairone32" target="_blank"><span
                       class="fab fa-github-alt"></span></a>
                 </li>
@@ -256,8 +256,7 @@
                 nossa metamorfose é continua. O destino final é esculpir uma versão melhor que a anterior!</p>
             <div class="pt-2">
               <ul class="social-icons text-right">
-                <li><a class="instagram" href="https://www.instagram.com/ercilia_regina/"><span class="fab fa-instagram"
-                      target="_blank"></span></a></li>
+                <li><a class="instagram" href="https://www.instagram.com/ercilia_regina/" target="_blank"><span class="fab fa-instagram" ></span></a></li>
                 <li><a class="github" href="https://github.com/ErciliaR" target="_blank"><span
                       class="fab fa-github-alt"></span></a></li>
                 <li><a class="linkedin" href="https://www.linkedin.com/in/erc%C3%ADlia-regina-silva-dantas-97008ab3/"
@@ -280,7 +279,7 @@
                um curso de Java, na Generation, e descobri uma profunda paixão por solucionar problemas.</p>
             <div class="pt-2">
               <ul class="social-icons text-right">
-                <li><a class="instagram" href="#"><span class="fab fa-instagram" target="_blank"></span></a></li>
+                <li><a class="instagram" href="https://www.instagram.com/leeomatheus/" target="_blank"><span class="fab fa-instagram" ></span></a></li>
                 <li><a class="github" href="https://github.com/LeonardoMFSilva" target="_blank"><span
                       class="fab fa-github-alt"></span></a>
                 </li>
@@ -307,7 +306,6 @@
                   
             <div class="pt-2">
               <ul class="social-icons text-right">
-                <li><a class="instagram" href="#"><span class="fab fa-instagram" target="_blank"></span></a></li>
                 <li><a class="github" href="https://github.com/LucasWilliam2100" target="_blank"><span
                       class="fab fa-github-alt"></span></a>
                 </li>
@@ -333,7 +331,7 @@
             </p>
             <div class="pt-2">
               <ul class="social-icons text-right">
-                <li><a class="instagram" href="#" target="_blank"><span class="fab fa-instagram"></span></a></li>
+                <li><a class="instagram" href="https://www.instagram.com/miguelcutri/" target="_blank"><span class="fab fa-instagram"></span></a></li>
                 <li><a class="github" href="https://github.com/Miguelcutri" target="_blank"><span
                       class="fab fa-github-alt"></span></a>
                 </li>
