--- a/FrontEnd/ConectaMais/src/app/rodape/rodape.component.html
+++ b/FrontEnd/ConectaMais/src/app/rodape/rodape.component.html
@@ -29,11 +29,11 @@
         <div class="col-xs-6 col-md-3">
           <h6>Parceiros</h6>
           <ul class="footer-links">
-            <li><a href="#">I-mei</a></li>
-            <li><a href="#">ColaborArt</a></li>
-            <li><a href="#">Rural Sabor</a></li>
-            <li><a href="#">Ecompra</a></li>
-            <li><a href="#">RaizAgro</a></li>
+            <li><a href="#" target="_blank">I-mei</a></li>
+            <li><a href="#" target="_blank">ColaborArt</a></li>
+            <li><a href="#" target="_blank">Rural Sabor</a></li>
+            <li><a href="#" target="_blank">Ecompra</a></li>
+            <li><a href="#" target="_blank">RaizAgro</a></li>
           </ul>
         </div>
       </div>
