--- a/FrontEnd/ConectaMais/src/app/minhas-postagens/minhas-postagens.component.css
+++ b/FrontEnd/ConectaMais/src/app/minhas-postagens/minhas-postagens.component.css
@@ -46,9 +46,9 @@
   }
 
   #edit:hover {
-    outline: #007a80;
+    outline: #FF914D;
     border: 1px solid;
-    background-color: #007a80;
+    background-color: #FF914D;
     color: white;
   }
 
