--- a/FrontEnd/ConectaMais/src/app/minhas-postagens/minhas-postagens.component.html
+++ b/FrontEnd/ConectaMais/src/app/minhas-postagens/minhas-postagens.component.html
@@ -74,7 +74,7 @@
 
         </div>
         <div class="modal-footer">
-          <button (click)='atualizar()' type="button" class="btn btn-info " data-dismiss="modal">Atualizar</button>
+          <button (click)='atualizar()' type="button" class="btn btn-success " data-dismiss="modal">Atualizar</button>
           <button type="button" class="btn btn-danger mr-4" data-dismiss="modal">Cancelar</button>
         </div>
       </div>
@@ -99,7 +99,7 @@
 
         </div>
         <div class="modal-footer">
-          <button (click)='deletar()' type="button" class="btn btn-info " data-dismiss="modal">Sim</button>
+          <button (click)='deletar()' type="button" class="btn btn-success " data-dismiss="modal">Sim</button>
           <button type="button" class="btn btn-danger mr-4" data-dismiss="modal">Não</button>
         </div>
       </div>
