--- a/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
@@ -2,7 +2,8 @@
   <div class="secao01">
     <!-- texto_chamada -->
     <div class="container m-0 ml-5 pb-5" style="padding-top: 23%;">
-      <p class="w-50 fw-bold fs-65 m-0 mb-4 fade-in" style="line-height: 100%;  text-shadow: 2px 2px 4px #000000;">
+      <p class="w-50 fw-bold fs-65 m-0 mb-4 w3-animate-left"
+        style="line-height: 100%;  text-shadow: 2px 2px 4px #000000;">
         Se conecte ainda mais<br>à Tecnologia</p>
       <p class="w-75 fw-bold fs-16 m-0 fade-in" style="text-shadow: 2px 2px 4px #000000;">Você quer aprender
         a programar, mas não sabe por onde começar.
@@ -19,7 +20,7 @@
 
 
   <!-- quem_somos -->
-  <span class="anchor" id="quemSomos" style="visibility: visible;"></span>
+  <span class="anchor" id="quemSomos"></span>
   <div class="secao02 d-flex align-items-center container-fluid pb-5 pt-5">
     <div class="container-fluid">
       <h1 class="text-center pt-5 pb-5">Quem somos</h1>
