--- a/FrontEnd/ConectaMais/src/app/feed/feed.component.html
+++ b/FrontEnd/ConectaMais/src/app/feed/feed.component.html
@@ -35,7 +35,7 @@
           <textarea [(ngModel)]='postagem.conteudoPostagem' class="form-control mb-3" name="descricao" id="descricao"
             rows="5"></textarea>
           <div class="row d-flex justify-content-end m-0">
-            <button (click)='publicar()' class="button button1" data-toggle="collapse" data-target="#collapseExample"
+            <button (click)='publicar()' class="btn my-btn" data-toggle="collapse" data-target="#collapseExample"
               aria-expanded="false" aria-controls="collapseExample">Publicar</button>
           </div>
         </div>
@@ -70,12 +70,12 @@
 
           <div class="accordion" [attr.id]="'coment' + post.postagemID">
 
-            <div class="mt-2 justify-content-end" id="headingTwo">
-              <h5 class="mb-2">
+            <div class="mt-2" id="headingTwo">
+              <h5 class="mb-3">
                 <button class="btn my-btn collapsed " type="button" data-toggle="collapse"
                   [attr.data-target]="'#' + 'comentButton' + post.postagemID" aria-expanded="false"
                   aria-controls="collapseTwo">
-                    <i class="fas fa-comment-alt-dots"></i>Comentar
+                    <i class="fas fa-comments mr-2"></i>Comentários
                 </button>
               </h5>
             </div>
@@ -90,8 +90,8 @@
                           placeholder="Digite aqui seu comentário" [(ngModel)]='comentario.conteudoComentario'>
                       </div>
                     </div>
-                    <div class="col-md-2 pl-1">
-                      <button class="btn btn-outline-primary w-100"
+                    <div class="col-md-2">
+                      <button class="btn my-btn w-100"
                         (click)='comentar(this.post.postagemID)'>Publicar</button>
                     </div>
                   </div>
@@ -100,12 +100,12 @@
 
               <div class="row d-flex justify-content-center" *ngFor='let comment of post.comentarioObj'>
                 <div class="col-md-11">
-                  <div class="card mb-3 shadow border-0">
+                  <div class="card mb-3 shadow border-0 bg-conecta">
                     <div class="card-body">
                       <div class="row">
                         <div class="col-md-10 d-flex align-items-center">
                           <!-- imagem do usuario -->
-                          <img src="https://i.imgur.com/iPnUWdQ.png" class=" rounded-circle w-40 img-fluid mr-2" alt="">
+                          <i class="fas fa-user-circle img-fluid mr-3 w3-xxlarge"></i>
                           <span class="font-weight-bold">{{comment.usuarioObj.nome}}:</span>
                         </div>
                         <div class="col-md-2 d-flex justify-content-end">
@@ -128,7 +128,7 @@
                       <hr>
 
                       <div class="d-flex justify-content-end">
-                        <small id="texto" class="form-text m-0 text-muted text-monospace">
+                        <small id="texto" class="form-text m-0 text-white">
                           Postado em {{ comment.dataCriacaoComentario | date:'dd/MM/yyyy'}} às
                           {{comment.dataCriacaoComentario | date:'HH:mm'}}
                         </small>
@@ -164,7 +164,8 @@
 
             </div>
             <div class="modal-footer">
-              <button (click)='atualizarComentario()' type="button" class="btn btn-info " data-dismiss="modal">Atualizar</button>
+              <button (click)='atualizarComentario()' type="button" class="btn btn-success"
+                data-dismiss="modal">Atualizar</button>
               <button type="button" class="btn btn-danger mr-4" data-dismiss="modal">Cancelar</button>
             </div>
           </div>
@@ -188,7 +189,7 @@
               <p>Tem certeza que deseja apagar este comentário?</p>
             </div>
             <div class="modal-footer">
-              <button (click)='deletarComentario()' type="button" class="btn btn-info " data-dismiss="modal">Sim</button>
+              <button (click)='deletarComentario()' type="button" class="btn btn-success " data-dismiss="modal">Sim</button>
               <button type="button" class="btn btn-danger mr-4" data-dismiss="modal">Não</button>
             </div>
           </div>
