--- a/FrontEnd/ConectaMais/src/app/conheca-inst/conheca-inst.component.html
+++ b/FrontEnd/ConectaMais/src/app/conheca-inst/conheca-inst.component.html
@@ -12,9 +12,7 @@
         <img class="d-flex mt-2 ml-3" src="/assets/img/icon-gen.png" width="100px" alt="Generation">
         <h3 class="d-flex m-0 pl-2">Generation</h3>
       </div>
-      <p class="d-block fs-16">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero minus corporis assumenda
-        quidem nemo aut praesentium, cupiditate consequuntur repellendus eveniet! Consequatur nisi et culpa doloremque
-        nobis unde ab velit dolor.</p>
+      <p class="d-block fs-16 text-dark">A Generation Brasil treina você nas habilidades mais relevantes para os empregadores, conectando você com o seu futuro. Saiba mais sobre nossos programas.</p>
     </div>
 
 
@@ -24,9 +22,7 @@
         <img class="d-flex mt-2 ml-3" src="/assets/img/icon-maria.png" width="100px" alt="Programaria">
         <h3 class="d-flex m-0 pl-2">Programaria</h3>
       </div>
-      <p class="d-block fs-16">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero minus corporis assumenda
-        quidem nemo aut praesentium, cupiditate consequuntur repellendus eveniet! Consequatur nisi et culpa doloremque
-        nobis unde ab velit dolor.</p>
+      <p class="d-block fs-16 text-dark">Empoderar mulheres através da tecnologia diminuindo o gap de gênero no mercado de trabalho. É isso que fazemos.</p>
     </div>
 
 
@@ -36,9 +32,7 @@
         <img class="d-flex mt-2 ml-3" src="/assets/img/icon-trybe.png" width="100px" alt="Trybe">
         <h3 class="d-flex m-0 pl-2">Trybe</h3>
       </div>
-      <p class="d-block fs-16">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero minus corporis assumenda
-        quidem nemo aut praesentium, cupiditate consequuntur repellendus eveniet! Consequatur nisi et culpa doloremque
-        nobis unde ab velit dolor.</p>
+      <p class="d-block fs-16 text-dark">Construímos nosso currículo com base no que o mercado de trabalho busca em profissionais de tecnologia. Com nosso Modelo de Sucesso Compartilhado, você tem a opção de começar a pagar apenas quando estiver trabalhando.</p>
     </div>
   </div>
 </div>
