botoes com cores iguais

--- a/FrontEnd/ConectaMais/src/app/feed/feed.component.html
+++ b/FrontEnd/ConectaMais/src/app/feed/feed.component.html
@@ -46,7 +46,8 @@
   <!--/ formulario de publicação -->
 
   <!-- feed de postagem -->
-  <hr class="mt-5">
+  <hr class="mt-5 mx-5 hr-new">
+
   <h4 class="text-center text-white my-5" style="text-shadow: 2px 2px 4px #000000;">Feed de postagens</h4>
 
   <div class="row d-flex justify-content-center mt-5 mb-5">
@@ -210,9 +211,6 @@
     </div>
   </div>
 
-  <div class="row d-flex justify-content-center pt-5 pb-5 m-0">
-    <button>Carregar mais...</button>
-  </div>
 
   <!-- /feed de postagem -->
   <div class="position-fixed-bottom m-0" style="height:350px;" id="padrao2"></div>
