--- a/FrontEnd/ConectaMais/src/app/perfil/perfil.component.html
+++ b/FrontEnd/ConectaMais/src/app/perfil/perfil.component.html
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button (click)='alterarSenha()' type="button" class="btn btn-info " data-dismiss="modal">Alterar</button>
+        <button (click)='alterarSenha()' type="button" class="btn btn-success " data-dismiss="modal">Alterar</button>
         <button type="button" class="btn btn-danger mr-4" data-dismiss="modal">Cancelar</button>
       </div>
     </div>
