--- a/FrontEnd/ConectaMais/src/app/feed/feed.component.css
+++ b/FrontEnd/ConectaMais/src/app/feed/feed.component.css
@@ -1,3 +1,12 @@
+.hr-new{
+    border: 4px solid #1B3659;
+    border-radius: 2px;
+}
+hr{
+  border: 1px solid #007A80;
+  border-radius: 0.5px;
+}
+
 #criarPost{
   background-color: #FF914D;
   color: white;
@@ -6,11 +15,9 @@
   text-transform: uppercase;
   width: 600px;
 }
-
 .container-fluid {
   background-color: #007a80;
 }
-
 .button {
   background-color: #007A80;
   /* Green */
@@ -25,24 +32,19 @@
   transition-duration: 0.4s;
   cursor: pointer;
 }
-
 .my-btn {
   background-color: #007A80;
   color: white;
 }
-
 .my-btn:hover {
   background-color: white;
   color: #007A80;
   font-weight: bolder;
   border: 2px solid #007A80;
 }
-
-
 #formularioPostagem {
   border-radius: 20px;
 }
-
 #padrao1 {
   background-image: url("/assets/img/padrao.png");
   background-repeat: no-repeat;
@@ -51,48 +53,42 @@
   width: auto;
   height: max-content;
 }
-
-  #padrao2 {
+#padrao2 {
      background-image: url("/assets/img/padrao2.png");
      background-repeat: no-repeat;
      background-size: 100%;
      background-position: bottom;
      width: auto;
      height: max-content;
-  }
-
-   #edit {
-     outline: white;
-     border: 1px solid;
-     background-color: transparent;
-     color: white;
-   }
-
-   #edit:hover {
-     outline: #FF914D;
-     border: 1px solid;
-     background-color: #FF914D;
-     color: white;
-   }
-
-   #alert {
-     outline: white;
-     border: 1px solid;
-     background-color: transparent;
-     color: white;
-   }
-
-   #alert:hover {
-     outline: red;
-     border: 1px solid;
-     background-color: red;
-     color: white;
-   }
-
-   .bg-conecta{
-     background-color: #007a80;
-     color: white;
-   }
+}
+#edit {
+  outline: white;
+  border: 1px solid;
+  background-color: transparent;
+  color: white;
+}
+#edit:hover {
+  outline: #FF914D;
+  border: 1px solid;
+  background-color: #FF914D;
+  color: white;
+}
+#alert {
+  outline: white;
+  border: 1px solid;
+  background-color: transparent;
+  color: white;
+}
+#alert:hover {
+  outline: red;
+  border: 1px solid;
+  background-color: red;
+  color: white;
+}
+.bg-conecta{
+  background-color: #007a80;
+  color: white;
+}
 
 
 
