--- a/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.html
+++ b/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.html
@@ -14,21 +14,21 @@
       <h2 class="mt-5">Usuário</h2>
       <div class="col-md-12">
         <div class="form-group was-validated">
-          <label for="nome" class="d-flex ">Nome:</label>
+          <label for="nome" class="d-flex ">*Nome:</label>
           <div class="textarea-wrapper">
             <input [(ngModel)]="usuario.nome" (ngModelChange)="valueChangeNome()" class="form-control mb-3" type="text"
               name="nome " id="nome" placeholder="Seu nome" minlength="2" maxlength="20" required>
             <span class="remaning px-5 align-self-center">{{remainingTextNome}}</span>
           </div>
 
-          <label for="email" class="d-flex ">Email:</label>
+          <label for="email" class="d-flex ">*Email:</label>
           <div class="textarea-wrapper">
             <input [(ngModel)]="usuario.email" (ngModelChange)="valueChangeEmail()" class="form-control mb-3"
               type="email" name="email " id="email" placeholder="Seu email" minlength="2" maxlength="255" required>
             <span class="remaning px-5 align-self-center">{{remainingTextEmail}}</span>
           </div>
 
-          <label for="papel" class="d-flex ">Tipo de usuário:</label>
+          <label for="papel" class="d-flex ">*Tipo de usuário:</label>
           <select (change)="papelUser($event)" class="custom-select" id="papel" required>
             <option value=""> Selecione um tipo de usuário</option>
             <option value="Estudante"> Estudante</option>
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="form-group was-validated">
-          <label for="senha" class="d-flex ">Senha:</label>
+          <label for="senha" class="d-flex ">*Senha:</label>
           <div class="textarea-wrapper">
             <input (input)="confirmSenha($event)" class="form-control" type="password" name="senha " id="senha"
               placeholder="Sua senha" minlength="5" maxlength="10" required>
@@ -111,7 +111,7 @@
           </div>
         </div>
         <div class="form-group was-validated">
-          <label for="confirmSenha" class="d-flex ">Confirme sua senha:</label>
+          <label for="confirmSenha" class="d-flex ">*Confirme sua senha:</label>
           <div class="textarea-wrapper">
             <input [(ngModel)]="usuario.senha" (ngModelChange)="valueChangeConfSenha()" class="form-control"
               type="password" name="confirmSenha " id="confirmSenha" placeholder="Repita a senha" minlength="5"
