--- a/FrontEnd/ConectaMais/src/app/minhas-postagens/minhas-postagens.component.html
+++ b/FrontEnd/ConectaMais/src/app/minhas-postagens/minhas-postagens.component.html
@@ -1,7 +1,8 @@
 <div class="container-fluid p-0 m-0" id="padrao1">
   <!-- minhas postagem -->
   <h4 class="text-center text-white mt-0 py-5" style="text-shadow: 2px 2px 4px #000000;">Minhas postagens</h4>
-  <div class="row d-flex justify-content-center mb-5" *ngFor='let item of usuario.postagemObj'>
+  <div class="row d-flex justify-content-center mb-5" 
+  *ngFor='let item of usuario.postagemObj | orderBy: key : reverse'>
     <div class="col-md-9 bg-white" id="formularioPostagem" style="padding-left: 64px; padding-right: 64px;">
       <div class="row">
         <div class="col-md-8 text-left pl-3 pr-0 ">
